style: set max-width to 1200px for section and wrapper classes

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,3 +10,15 @@ pre {
   white-space: -o-pre-wrap;    /* Opera 7 */
   word-wrap: break-word;       /* IE */
 }
+
+section {
+  max-width: 1200px;
+}
+
+#header nav {
+  max-width: 1200px;
+}
+
+.wrapper {
+  max-width: 1200px;
+}
